<resources>
    <string name="app_name">Smart Tuition Manager</string>

    <!-- Login Page -->
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to access your account</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Register</string>
    <string name="or_divider">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="register_message">Please contact your tuition center administrator to register for an account.   0112458595/0774559982</string>
    <string name="back_to_login">Back to Login</string>
    <string name="hello_blank_fragment" />
    <string name="notifications">Notifications</string>
    <string name="generate_qr_code_for_session">Generate QR Code for Session</string>
    <string name="save_qr">Save</string>
    <string name="download">Download</string>


</resources>